Add ignored paths for config monitor
Signed-off-by: 98001yash <yashchauhan.gaya@gmail.com>